@@ -730,6 +730,12 @@ notVolatileVariable(const char *var, lineNode *currPl, lineNode *endPl)
         return global_not_volatile;
     }
 
+  if (TARGET_PDK_LIKE)
+    {
+      if (var[0] == '#')
+        return true;
+    }
+
   /* Extract a symbol name from the variable */
   while (*vp && (*vp!='_'))
     vp++;
@@ -805,7 +811,7 @@ notVolatileVariable(const char *var, lineNode *currPl, lineNode *endPl)
       }
   }
 
-  /* Couldn't find the symbol for some reason. Assume volatile. */
+  /* Couldn't find the symbol for some reason. Assume volatile if the current function touches anything volatile. */
   return global_not_volatile;
 }
 
